ml-models-kserve-configs/text-generation/text-generation-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: text-generation-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - text-generation.dev.curieo.org
    port:
      name: http
      number: 80
      protocol: HTTP
