ml-models-kserve-configs/text-generation/text-generation-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: text-generation-virtualservice
  namespace: dev
spec:
  gateways:
  - text-generation-gateway
  hosts:
  - text-generation.dev.curieo.org
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
